# erdantic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  justfile  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versions.json
.github/: codecov.yml  failed_build_issue_template.md
.github/workflows/: docs-main.yml  docs-master.yml  docs-preview.yml  docs-publish.yml  release.yml  tests.yml
docs/: dataclasses.ipynb  example.ipynb  generate_images.py  generate_pydantic_with_default_column_diagram.py  hooks.py  mkdocs.yml
docs/docs/: cli.md  customizing.md  extending.md  forward-references.md  index.md
docs/docs/api-reference/: base.md  convenience.md  core.md  d2.md  dataclasses.md  erd.md  errors.md  examples.dataclasses.md  examples.pydantic.md  exceptions.md  pydantic.md  typing_utils.md
docs/docs/examples/: attrs.ipynb  dataclasses.ipynb  pydantic.ipynb
docs/notebooks/: attrs.ipynb  dataclasses.ipynb  msgspec.ipynb  pydantic.ipynb
docs/notebooks/output-formats/: d2.ipynb
erdantic/: __init__.py  __main__.py  _logging.py  _repr_utils.py  base.py  cli.py  convenience.py  core.py  d2.py  dataclasses.py  edataclasses.py  epydantic.py  erd.py  errors.py  exceptions.py  pydantic.py  pydantic1.py  refactor.py  refactor_pydantic.py  typing.py  typing_utils.py  version.py
erdantic/examples/: __init__.py  attrs.py  dataclasses.py  msgspec.py  pydantic.py  pydantic_v1.py
erdantic/plugins/: __init__.py  _registry.py  attrs.py  dataclasses.py  msgspec.py  pydantic.py
erdantic/refactor/: __init__.py  core.py  dataclasses.py  pydantic.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api-reference/convenience/: index.html
latest/api-reference/core/: index.html
latest/api-reference/d2/: index.html
latest/api-reference/exceptions/: index.html
latest/api-reference/plugins/: index.html
latest/api-reference/typing_utils/: index.html
latest/changelog/: index.html
latest/cli/: index.html
latest/customizing/: index.html
latest/extending/: index.html
latest/forward-references/: index.html
latest/search/: search_index.json
pydantic_erd/: __init__.py  dataclasses.py  erd.py  pydantic.py
requirements/: dev.txt  docs.txt  lint.txt  tests.txt  typecheck.txt
scripts/: fix_graphviz.sh
stable/: 404.html  index.html  sitemap.xml
stable/api-reference/base/: index.html
stable/api-reference/convenience/: index.html
stable/api-reference/core/: index.html
stable/api-reference/dataclasses/: index.html
stable/api-reference/erd/: index.html
stable/api-reference/errors/: index.html
stable/api-reference/examples.dataclasses/: index.html
stable/api-reference/examples.pydantic/: index.html
stable/api-reference/exceptions/: index.html
stable/api-reference/plugins/: index.html
stable/api-reference/pydantic/: index.html
stable/api-reference/typing_utils/: index.html
stable/changelog/: index.html
stable/cli/: index.html
stable/customizing/: index.html
stable/examples/attrs/: index.html
stable/examples/pydantic/: index.html
stable/extending/: index.html
stable/forward-references/: index.html
stable/search/: search_index.json
tests/: conftest.py  module_with_error.py  pydantic_with_default_column.py  snapshot_cases.py  test_adapters.py  test_against_assets.py  test_attrs.py  test_base.py  test_cli.py  test_convenience.py  test_core.py  test_d2.py  test_dataclasses.py  test_erd.py  test_msgspec.py  test_plugins.py  test_pydantic.py  test_pydantic1.py  test_pydantic_v1.py  test_regressions.py  test_typing.py  test_typing_utils.py  typechecks.py  utils.py
tests/assets/: attrs.dot  attrs.json  dataclasses.d2  dataclasses.dot  dataclasses.json  pydantic.d2  pydantic.dot  pydantic.json  pydantic_v1.d2  pydantic_v1.dot  pydantic_v1.json
tests/scripts/: generate_pydantic_with_defaults_assets.py  generate_static_assets.py
v0.1/: 404.html  index.html  sitemap.xml
v0.1/changelog/: index.html
v0.1/cli/: index.html
v0.1/extending/: index.html
v0.1/search/: search_index.json
v0.2/: index.html  sitemap.xml
v0.2/changelog/: index.html
v0.2/cli/: index.html
v0.2/extending/: index.html
v0.2/search/: search_index.json
v0.3/: 404.html  index.html  sitemap.xml
v0.3/changelog/: index.html
v0.3/cli/: index.html
v0.3/extending/: index.html
v0.3/forward-references/: index.html
v0.3/search/: search_index.json
v0.4/: 404.html  index.html  sitemap.xml
v0.4/changelog/: index.html
v0.4/cli/: index.html
v0.4/extending/: index.html
v0.4/forward-references/: index.html
v0.5/: 404.html  index.html  sitemap.xml
v0.5/changelog/: index.html
v0.5/cli/: index.html
v0.5/extending/: index.html
v0.5/forward-references/: index.html
v0.5/search/: search_index.json
v0.6/: 404.html  index.html  sitemap.xml
v0.6/changelog/: index.html
v0.6/cli/: index.html
v0.6/extending/: index.html
v0.6/forward-references/: index.html
v0.7/: 404.html  index.html  objects.inv  sitemap.xml
v0.7/changelog/: index.html
v0.7/cli/: index.html
v0.7/extending/: index.html
v0.7/forward-references/: index.html
v0.7/search/: search_index.json
v1.0/: index.html
v1.0.0rc1/customizing/: index.html
v1.0/changelog/: index.html
v1.0/cli/: index.html
v1.0/css/: mkdocs-jupyter-extra.css
v1.0/extending/: index.html
v1.0/search/: search_index.json
v1.1/: 404.html  sitemap.xml
v1.1/changelog/: index.html
v1.1/customizing/: index.html
v1.1/extending/: index.html
v1.1/search/: search_index.json
v1.2/: 404.html  index.html  sitemap.xml
v1.2/customizing/: index.html
v1.2/extending/: index.html
~dev/: 404.html  index.html  sitemap.xml
~dev/changelog/: index.html
~dev/cli/: index.html
~dev/extending/: index.html
~dev/search/: search_index.json
~latest/: 404.html  index.html  objects.inv  sitemap.xml
~latest/changelog/: index.html
~latest/cli/: index.html
~latest/customizing/: index.html
~latest/extending/: index.html
~latest/forward-references/: index.html
~latest/search/: search_index.json
(+229 files in other folders)
