[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erdantic"
version = "1.0.5"
description = "Entity relationship diagrams for Python data model classes like Pydantic."
readme = "README.md"
authors = [{ name = "DrivenData", email = "info@drivendata.org" }, { name = "Jay Qi" }]
license = { text = "MIT License" }
keywords = ["erd", "entity relationship diagram", "dataclasses", "pydantic", "attrs"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
]
requires-python = ">=3.8"
dependencies = [
  "pydantic >= 2",
  "pydantic-core",
  "pygraphviz",
  "sortedcontainers-pydantic",
  "typenames >= 1.3",
  "typer",
  "typing_extensions>4 ; python_version < '3.12'",
]

[project.optional-dependencies]
attrs = ["attrs"]

[project.scripts]
erdantic = "erdantic.cli:app"

[project.urls]
"Repository" = "https://github.com/drivendataorg/erdantic"
"Documentation" = "https://erdantic.drivendata.org/"
"Bug Tracker" = "https://github.com/drivendataorg/erdantic/issues"
"Changelog" = "https://erdantic.drivendata.org/stable/changelog/"

[tool.ruff]
line-length = 99
src = ["erdantic/**/*.py", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["erdantic"]
force-sort-within-sections = true

[tool.mypy]
files = ["erdantic", "tests/typechecks.py"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=erdantic --cov-report=term --cov-report=html --cov-report=xml --cov-append"
testpaths = ["tests"]

[tool.coverage.run]
source = ["erdantic"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]
